removed dist folder

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/dist/css/main.css" />
+    <link rel="stylesheet" href="/styles/main.css" />
     <title>My Bikerland</title>
   </head>
   <body>
@@ -52,7 +52,7 @@
             <i class="fab fa-instagram"></i>
           </a>
           <a href="#!">
-            <i class="fab fa-github"></i>
+            <i class="fab fa-snapchat-ghost"></i>
           </a>
         </div>
         <span class="hero__scroll aos-init aos-animate">
