--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/styles/main.css" />
+    <link rel="stylesheet" href="/styles/css/main.css"/>
     <title>My Bikerland</title>
   </head>
   <body>
@@ -109,6 +109,5 @@
     <script>
       AOS.init();
     </script>
-    <script src="js/main.js"></script>
   </body>
 </html>
