--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/styles/css/main.css"/>
+    <link rel="stylesheet" href="/styles/css/style.css"/>
     <title>My Bikerland</title>
   </head>
   <body>
