fixed image urls

--- a/index.html
+++ b/index.html
@@ -16,48 +16,48 @@
       href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/styles/css/style.css"/>
+    <link rel="stylesheet" href="styles/css/style.css" />
     <title>My Bikerland</title>
   </head>
   <body>
     <header>
-        <div class="menu-btn">
-          <span class="menu-btn__burger"></span>
-        </div>
-        <nav class="nav">
-          <ul class="nav-menu">
-            <li class="nav-menu__item">
-              <a href="#" class="nav-menu__link"> Home </a>
-            </li>
-            <li class="nav-menu__item">
-              <a href="#about" class="nav-menu__link"> About </a>
-            </li>
-            <li class="nav-menu__item">
-              <a href="#blog" class="nav-menu__link"> Blog </a>
-            </li>
-            <li class="nav-menu__item">
-              <a href="#contact" class="nav-menu__link"> Contact </a>
-            </li>
-          </ul>
-        </nav>
-        <h1 data-aos="zoom-in">Bikerland</h1>
-        <div class="social-icons">
-          <a href="#!">
-            <i class="fab fa-twitter"></i>
-          </a>
-          <a href="#!">
-            <i class="fab fa-facebook"></i>
-          </a>
-          <a href="#!">
-            <i class="fab fa-instagram"></i>
-          </a>
-          <a href="#!">
-            <i class="fab fa-snapchat-ghost"></i>
-          </a>
-        </div>
-        <span class="hero__scroll aos-init aos-animate">
-          <i class="chevron bottom"></i>
-        </span>
+      <div class="menu-btn">
+        <span class="menu-btn__burger"></span>
+      </div>
+      <nav class="nav">
+        <ul class="nav-menu">
+          <li class="nav-menu__item">
+            <a href="#" class="nav-menu__link"> Home </a>
+          </li>
+          <li class="nav-menu__item">
+            <a href="#about" class="nav-menu__link"> About </a>
+          </li>
+          <li class="nav-menu__item">
+            <a href="#blog" class="nav-menu__link"> Blog </a>
+          </li>
+          <li class="nav-menu__item">
+            <a href="#contact" class="nav-menu__link"> Contact </a>
+          </li>
+        </ul>
+      </nav>
+      <h1 data-aos="zoom-in">Bikerland</h1>
+      <div class="social-icons">
+        <a href="#!">
+          <i class="fab fa-twitter"></i>
+        </a>
+        <a href="#!">
+          <i class="fab fa-facebook"></i>
+        </a>
+        <a href="#!">
+          <i class="fab fa-instagram"></i>
+        </a>
+        <a href="#!">
+          <i class="fab fa-snapchat-ghost"></i>
+        </a>
+      </div>
+      <span class="hero__scroll aos-init aos-animate">
+        <i class="chevron bottom"></i>
+      </span>
     </header>
     <main>
       <section>
@@ -88,7 +88,12 @@
           </div>
         </div>
         <div class="alissa">
-          <div class="alissa-img"><img src="/assets/image-6.jpg" alt="" /></div>
+          <div class="alissa-img">
+            <img
+              src="https://maclapinski.github.io/Bikerland2/assets/image-6.jpg"
+              alt=""
+            />
+          </div>
           <div class="alissa-text">
             <h1>Meet Alissa</h1>
             <p>
@@ -109,5 +114,6 @@
     <script>
       AOS.init();
     </script>
+    <script src="js/main.js"></script>
   </body>
 </html>
