links section finished

--- a/index.html
+++ b/index.html
@@ -74,6 +74,8 @@
           </div>
           <div class="about-img"></div>
         </div>
+      </section>
+      <section>
         <div class="mission">
           <div class="mission-img"></div>
           <div class="mission-text">
@@ -87,10 +89,12 @@
             <a href="#" class="read-more">Read More</a>
           </div>
         </div>
+      </section>
+      <section>
         <div class="alissa">
           <div class="alissa-img">
             <img
-              src="https://maclapinski.github.io/Bikerland2/assets/image-6.jpg"
+              src="https://maclapinski.github.io/Bikerland/assets/image-6.jpg"
               alt=""
             />
           </div>
@@ -108,12 +112,18 @@
           </div>
         </div>
       </section>
+      <section>
+        <div class="links">
+          <div class="products"><a href="#"><i class="fas fa-bicycle"></i>Products</a></div>
+          <div class="community"><a href="#"><i class="fas fa-users"></i>Community</a></div>
+          <div class="reachOut"><a href="#"><i class="fas fa-phone-alt"></i>Reach out</a></div>
+        </div>
+      </section>
     </main>
     <script src="https://kit.fontawesome.com/6d2ea823d0.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
       AOS.init();
     </script>
-    <script src="js/main.js"></script>
   </body>
 </html>
