--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </header>
     <main>
       <section>
-        <div class="about">
+        <div class="about" id="about">
           <div class="about-text">
             <h1>About us</h1>
             <p>
@@ -91,7 +91,7 @@
         </div>
       </section>
       <section>
-        <div class="alissa">
+        <div class="alissa" id="blog">
           <div class="alissa-img">
             <img
               src="https://maclapinski.github.io/Bikerland/assets/image-6.jpg"
@@ -114,12 +114,72 @@
       </section>
       <section>
         <div class="links">
-          <div class="products"><a href="#"><i class="fas fa-bicycle"></i>Products</a></div>
-          <div class="community"><a href="#"><i class="fas fa-users"></i>Community</a></div>
-          <div class="reachOut"><a href="#"><i class="fas fa-phone-alt"></i>Reach out</a></div>
+          <div class="products">
+            <a href="#"><i class="fas fa-bicycle"></i>Products</a>
+          </div>
+          <div class="community">
+            <a href="#"><i class="fas fa-users"></i>Community</a>
+          </div>
+          <div class="reachOut">
+            <a href="#"><i class="fas fa-phone-alt"></i>Reach out</a>
+          </div>
+        </div>
+      </section>
+      <section>
+        <div class="the-gram">
+          <h1 class="the-gram-title">The Gram</h1>
+          <div class="the-gram-images">
+            <div class="the-gram-image">
+              <img
+                src="https://maclapinski.github.io/Bikerland/assets/image-8.jpg"
+                alt=""
+              />
+            </div>
+            <div class="the-gram-image">
+              <img
+                src="https://maclapinski.github.io/Bikerland/assets/image-3.jpg"
+                alt=""
+              />
+            </div>
+            <div class="the-gram-image hidden-on-mobile">
+              <img
+                src="https://maclapinski.github.io/Bikerland/assets/image-4.jpg"
+                alt=""
+              />
+            </div>
+          </div>
         </div>
       </section>
     </main>
+    <footer>
+      <nav>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#blog">Blog</a></li>
+        </ul>
+      </nav>
+      <div class="contact">
+        <div class="contact-text">
+          <h2>Contact</h2>
+          <p>
+            info@email.com | 123 - 456 - 7890<br />123 some road, Toronto, ON<br />A5A
+            5A5, Canada
+          </p>
+        </div>
+        <div class="subscribe-container">
+          <h2>Stay updated</h2>
+          <form class="email">
+            <label for="email">Subscribe to our newsletter to stay updated.</label>
+            <input type="email" id="email" placeholder="email address">
+            <input type="submit" value="Subscribe">
+        </form>
+        </div>
+      </div>
+      <div class="copyright">
+        <p>Lorem ipsum, dolor</p>
+    </div>
+    </footer>
     <script src="https://kit.fontawesome.com/6d2ea823d0.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
