images converted to avif

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
           <div class="alissa" id="blog">
             <div class="alissa-img">
               <img
-                src="https://maclapinski.github.io/Bikerland/assets/image-6.jpg"
+                src="/assets/image-6.avif"
                 alt="Woman on a road bike in a city, going fast"
               />
             </div>
@@ -193,19 +193,19 @@
           <div class="the-gram-images">
             <div class="the-gram-image">
               <img
-                src="https://maclapinski.github.io/Bikerland/assets/image-8.jpg"
+                src="/assets/image-8.avif"
                 alt="a female biker with a grey sweater and red helmet biking next to a brick house"
               />
             </div>
             <div class="the-gram-image">
               <img
-                src="https://maclapinski.github.io/Bikerland/assets/image-3.jpg"
+                src="/assets/image-3.avif"
                 alt="a black and white image of a male biker biking along the road next to a crowd of onlookers"
               />
             </div>
             <div class="the-gram-image hidden-on-mobile">
               <img
-                src="https://maclapinski.github.io/Bikerland/assets/image-4.jpg"
+                src="/assets/image-4.avif"
                 alt="an old, white bike leaning against the wall of a wooden house"
               />
             </div>
@@ -254,7 +254,7 @@
       //This function hides "scroll down chevron" after page has been scrolled 400px
       function testScroll() {
         if (window.pageYOffset > 400) {
-          document.querySelector(".chevron").style.color = "transparent";
+          document.querySelector('.chevron').style.color = 'transparent';
         }
       }
       window.onscroll = testScroll;
