--- a/index.html
+++ b/index.html
@@ -123,7 +123,8 @@
       </section>
       <section>
         <div class="mission">
-          <div class="mission-img"></div>
+          <div class="mission-img">
+          </div>
           <div class="mission-text">
             <h1>Our mission</h1>
             <p>
@@ -141,6 +142,7 @@
           <div class="alissa" id="blog">
             <div class="alissa-img">
               <img
+              width="945" height="945"
                 src="/assets/image-6.avif"
                 alt="Woman on a road bike in a city, going fast"
               />
@@ -193,18 +195,21 @@
           <div class="the-gram-images">
             <div class="the-gram-image">
               <img
+              width="800" height="800"
                 src="/assets/image-8.avif"
                 alt="a female biker with a grey sweater and red helmet biking next to a brick house"
               />
             </div>
             <div class="the-gram-image">
               <img
+              width="1200" height="1200"
                 src="/assets/image-3.avif"
                 alt="a black and white image of a male biker biking along the road next to a crowd of onlookers"
               />
             </div>
             <div class="the-gram-image hidden-on-mobile">
               <img
+              width="800" height="800"
                 src="/assets/image-4.avif"
                 alt="an old, white bike leaning against the wall of a wooden house"
               />
