--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       property="og:description"
       content="Single-page, pixel-perfect PSD conversion. Accessible & responsive across all devices."
     />
-    <!-- <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Catamaran:wght@400;700&display=swap"
@@ -24,7 +24,7 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap"
       rel="stylesheet"
-    /> -->
+    />
     <link rel="stylesheet" href="styles/css/style.css" />
     <title>My Bikerland</title>
   </head>
@@ -252,7 +252,7 @@
         <p>Lorem ipsum, dolor</p>
       </div>
     </footer>
-    <!-- <script src="https://kit.fontawesome.com/6d2ea823d0.js"></script>
+    <script src="https://kit.fontawesome.com/6d2ea823d0.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
       AOS.init();
@@ -264,6 +264,6 @@
       }
       window.onscroll = testScroll;
       //**********************************
-    </script> -->
+    </script>
   </body>
 </html>
