--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             <div class="alissa-img">
               <img
               width="400" height="400"
-                src="/assets/image-6.avif"
+                src="/Bikerland/assets/image-6.avif"
                 alt="Woman on a road bike in a city, going fast"
               />
             </div>
