img path update

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta
       name="image"
       property="og:image"
-      content="https://maclapinski.github.io/Bikerland/assets/Bikerland_preview.png"
+      content="https://maclapinski.github.io/Bikerland/Bikerland/assets/Bikerland_preview.png"
     />
     <meta
       property="og:description"
@@ -123,8 +123,7 @@
       </section>
       <section>
         <div class="mission">
-          <div class="mission-img">
-          </div>
+          <div class="mission-img"></div>
           <div class="mission-text">
             <h1>Our mission</h1>
             <p>
@@ -142,7 +141,8 @@
           <div class="alissa" id="blog">
             <div class="alissa-img">
               <img
-              width="400" height="400"
+                width="400"
+                height="400"
                 src="/Bikerland/assets/image-6.avif"
                 alt="Woman on a road bike in a city, going fast"
               />
@@ -195,22 +195,25 @@
           <div class="the-gram-images">
             <div class="the-gram-image">
               <img
-              width="400" height="400"
-                src="/assets/image-8.avif"
+                width="400"
+                height="400"
+                src="/Bikerland/assets/image-8.avif"
                 alt="a female biker with a grey sweater and red helmet biking next to a brick house"
               />
             </div>
             <div class="the-gram-image">
               <img
-              width="400" height="400"
-                src="/assets/image-3.avif"
+                width="400"
+                height="400"
+                src="/Bikerland/assets/image-3.avif"
                 alt="a black and white image of a male biker biking along the road next to a crowd of onlookers"
               />
             </div>
             <div class="the-gram-image hidden-on-mobile">
               <img
-              width="400" height="400"
-                src="/assets/image-4.avif"
+                width="400"
+                height="400"
+                src="/Bikerland/assets/image-4.avif"
                 alt="an old, white bike leaning against the wall of a wooden house"
               />
             </div>
