contact link fix

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
           <li><a href="#blog">Blog</a></li>
         </ul>
       </nav>
-      <div class="contact">
+      <div class="contact" id="contact">
         <div class="contact-text">
           <h2>Contact</h2>
           <p>
@@ -252,7 +252,7 @@
         </div>
       </div>
       <div class="copyright">
-        <p>Lorem ipsum, dolor</p>
+        <p>Created by Mac Lapinski</p>
       </div>
     </footer>
     <script src="https://kit.fontawesome.com/6d2ea823d0.js"></script>
