--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta
       name="image"
       property="og:image"
-      content="https://maclapinski.github.io/Bikerland/Bikerland/assets/Bikerland_preview.png"
+      content="https://maclapinski.github.io/assets_preview.png"
     />
     <meta
       property="og:description"
@@ -143,7 +143,7 @@
               <img
                 width="400"
                 height="400"
-                src="/Bikerland/assets/image-6.avif"
+                src="/assets/image-6.webp"
                 alt="Woman on a road bike in a city, going fast"
               />
             </div>
@@ -197,7 +197,7 @@
               <img
                 width="400"
                 height="400"
-                src="/Bikerland/assets/image-8.avif"
+                src="/assets/image-8.webp"
                 alt="a female biker with a grey sweater and red helmet biking next to a brick house"
               />
             </div>
@@ -205,7 +205,7 @@
               <img
                 width="400"
                 height="400"
-                src="/Bikerland/assets/image-3.avif"
+                src="/assets/image-3.webp"
                 alt="a black and white image of a male biker biking along the road next to a crowd of onlookers"
               />
             </div>
@@ -213,7 +213,7 @@
               <img
                 width="400"
                 height="400"
-                src="/Bikerland/assets/image-4.avif"
+                src="/assets/image-4.webp"
                 alt="an old, white bike leaning against the wall of a wooden house"
               />
             </div>
